# chrumm-keyboard

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE.txt  MATERIALS.md  README.md  SHOPPING_LIST.md
body/: .gitignore  ASSEMBLY.md  README.md  chrumm.json  draft.json
body/chrumm/: __init__.py  __main__.py  cfg.py  make.py  pcb.py  stl.py
body/prusa/: chrumm-body.ini  chrumm-floor.ini  chrumm-knob.ini  chrumm-palm.ini  clean-3mf-seam.py
files/: chrumm-01-body.stl  chrumm-01-palms.stl  chrumm-01-plate-bridged.dxf  chrumm-01-plate-floor.dxf  chrumm-01-plate-left.dxf  chrumm-01-plate-middle.dxf  chrumm-01-plate-right.dxf  chrumm-02-body.stl  chrumm-02-palms.stl  chrumm-02-plate-bridged.dxf  chrumm-02-plate-floor.dxf  chrumm-02-plate-left.dxf  chrumm-02-plate-right.dxf  chrumm-02-plate-rim.dxf
firmware/: CMakeLists.txt  README.md
firmware/chrumm/: config.h  encoder.c  encoder.h  hid.c  hid.h  led.c  led.h  main.c  matrix.c  matrix.h  usage.h  usb.c  usb.h
pcb/: .gitignore  README.md
pcb/chrumm/: chrumm-plot.py  chrumm.kicad_dru  chrumm.kicad_pcb  chrumm.kicad_pro  chrumm.kicad_sch  chrumm.kicad_sym  chrumm.kicad_wks  sym-lib-table
prusa/: chrumm-body.ini  chrumm-floor.ini  chrumm-knob.ini  chrumm-palm.ini
source/: README.md  chrumm.json
source/chrumm/: __init__.py  __main__.py  make.py  stl.py
source/variants/: chrumm-full.json  chrumm-knob-loose.json  chrumm-knob-loosest.json  chrumm-knob-tight.json  chrumm-knob-tightest.json  chrumm-knob.json  chrumm-nopalm.json  chrumm-test.json
sources/: chrumm-body.blend
tools/: README.md  slice-stl.py  svg-to-dxf.py
(+72 files in other folders)
